--- a/assets/styles/defaults.styl
+++ b/assets/styles/defaults.styl
@@ -5,7 +5,7 @@
   --max-width: 65ch
   --gap: 1.5rem
 
-  --font-plain: 'Open Sans', sans-serif
+  --font-plain: 'Lato', sans-serif
 
   --font-size-tiny: 0.75rem
   --font-size-small: 0.875rem
@@ -16,7 +16,6 @@
 
   --weight-light: 300
   --weight-regular: 400
-  --weight-medium: 600
   --weight-bold: 700
 
   /* MODULAR SCALE */
