--- a/assets/styles/reset.styl
+++ b/assets/styles/reset.styl
@@ -23,3 +23,6 @@ a[href]:not([class])
 img, picture, svg, video
   display: block
   max-width: 100%
+
+small
+  font-size: var(--font-size-small, .75rem)
