--- a/assets/styles/defaults.styl
+++ b/assets/styles/defaults.styl
@@ -24,6 +24,7 @@
   --s1: calc(var(--s0) * var(--ratio)) // 1.5rem - 24px
   --s2: calc(var(--s1) * var(--ratio)) // 2.25rem - 36px  
   --s3: calc(var(--s2) * var(--ratio)) // 3.375rem - 54px
+  --s4: calc(var(--s3) * var(--ratio)) // 5.0625rem - 81px
 
   --stack-300: 0
   --stack-400: 10
