WIP Page Cursos

--- a/assets/styles/reset.styl
+++ b/assets/styles/reset.styl
@@ -26,4 +26,4 @@ img, picture, svg, video
   max-width: 100%
 
 small
-  font-size: var(--font-size-small, .75rem)
+  font-size: var(--font-size-tiny, .75rem)
