WIP Pagina Curso

--- a/assets/styles/defaults.styl
+++ b/assets/styles/defaults.styl
@@ -42,6 +42,7 @@
   --color-grey-light: #f0f0f0
   --color-neutral: #fbfbfb
   --color-primary: #5f92d3
+  --color-primary-light: #b9d5fc40
   --color-secondary: #e352b1
   --color-accent: #ee1696
   --color-success: #34C759
